Replaced default header image Escaped all occurrences of $color_accent with esc_html Fixed title vertical aligned problem on all type of pages Default fonts updated to be changed in customizer preview too

--- a/assets/sass/2_elements/_page-header-height.scss
+++ b/assets/sass/2_elements/_page-header-height.scss
@@ -1,8 +1,17 @@
 /* Page header height on default page template */
+.archive,
 .page-template-default {
 
   .boxed-layout-header {
     padding-bottom: 0;
+  }
+}
+
+/* Page header height on search and shop page */
+.archive.woocommerce-page,
+.search {
+  .boxed-layout-header {
+    padding-bottom: 60px;
   }
 }
 
